--- a/front.css
+++ b/front.css
@@ -125,9 +125,11 @@
 	#title{width:50%;}
 	.left{padding-top:1px;}
 	.media{display:block;}
+	.spotify{width:16%;}
 	.album{
 		display:block;
 		border-color:10px solid red;
+		width:
 		}
 	.youtube{
 		position:relative;
