--- a/front.css
+++ b/front.css
@@ -125,7 +125,7 @@
 	#title{width:50%;}
 	.left{padding-top:1px;}
 	.media{display:block;}
-	.spotify{width:16%;}
+	.spotify{padding-left:16%;}
 	.album{
 		display:block;
 		border-color:10px solid red;
